# etd-retreat-sep2013

haskell-retreat-sep2013/: retreat-sep2013.cabal
haskell-retreat-sep2013/test/src/: exercise0  exercise0.hs  exercise1.hs  exercise2.hs  exercise3.hs  exercise4.hs  exercise5.hs  exercise6.hs  exercise7.hs  exercise8.hs  exercise9.hs
scala-retreat-sep2013/: build.sbt  pom.xml
scala-retreat-sep2013/src/main/scala/: Application.scala
scala-retreat-sep2013/src/test/scala/: CalculatorSpec.scala
